--- a/public/css/Style.css
+++ b/public/css/Style.css
@@ -104,17 +104,42 @@
   /* Buttons
      ========================================================================== */
   
-  .button {
-    height: 50px;
-    line-height: 50px;
-    width: 100%;
-    text-decoration: none;
-    text-align: center;
-    font-size: 20px
-  }
-  
-  .button-twitter {
-    color: #FFFFFF;
-    background-color: #659AF1;
-    border-radius: 5px;
-  }
+  /* From cssbuttons.io by @alexroumi */
+button {
+  padding: 15px 25px;
+  border: unset;
+  border-radius: 15px;
+  color: #212121;
+  z-index: 1;
+  background: #e8e8e8;
+  position: relative;
+  font-weight: 1000;
+  font-size: 17px;
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  transition: all 250ms;
+  overflow: hidden;
+ }
+ 
+ button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  border-radius: 15px;
+  background-color: #212121;
+  z-index: -1;
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  transition: all 250ms
+ }
+ 
+ button:hover {
+  color: #e8e8e8;
+ }
+ 
+ button:hover::before {
+  width: 100%;
+ }
