--- a/public/css/Style.css
+++ b/public/css/Style.css
@@ -106,7 +106,7 @@
   
   /* From cssbuttons.io by @alexroumi */
 button {
-  padding: 15px 25px;
+  padding: 10px 10px;
   border: unset;
   border-radius: 15px;
   color: #212121;
@@ -119,6 +119,7 @@ button {
   box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
   transition: all 250ms;
   overflow: hidden;
+  margin-left: 20px;
  }
  
  button::before {
