added home button to pages

--- a/views/countries.pug
+++ b/views/countries.pug
@@ -3,6 +3,8 @@ extends default
 block content
   head
     title Countries, Population sorter
+    a(href=`/`)
+      button Home
     meta(charset='UTF-8')
 
     link(rel='stylesheet', href='/css/tablesorter.css')
