--- a/views/data.pug
+++ b/views/data.pug
@@ -3,7 +3,9 @@ extends default
 block content
   head
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  body 
+  body
+    a(href=`/`)
+      button Home
     button.btn
       i.fa.fa-download
         |  Download
