--- a/views/countries.pug
+++ b/views/countries.pug
@@ -1,43 +1,58 @@
 extends default
-
 block content
-  head
-    title Countries, Population sorter
-    a(href=`/`)
-      button Home
-    meta(charset='UTF-8')
+  
+  p Click the button to sort the table alphabetically, by name:
+  p
+    button(onclick='sortTable()') Sort
+  table#myTable.styled.table
+          thead
+            tr
+              th Code
+              th Name
+              th Continent
+              th Region
+              th Population
+              th Capital
+          each country in json
+            tr
+              td #{country.Code}
+              td #{country.Name}
+              td #{country.Continent}
+              td #{country.Region}
+              td #{country.Population}
+              td #{country.Capital}
 
-    link(rel='stylesheet', href='/css/tablesorter.css')
 
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
-    script(src='https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js')
-    script(src='https://mottie.github.io/tablesorter/js/jquery.tablesorter.js')
-    script(src='https://mottie.github.io/tablesorter/js/jquery.tablesorter.widgets.js')
-
-  body
-
-    .container
-      block content
- 
-      script(type='text/javascript').
-        $(function() {
-          $("table.tablesorter").tablesorter({
-            sortList: [[1,1]],
-            // set bootstrap theme
-            theme : 'bootstrap',
-            // icon needed for bootstrap theme
-            headerTemplate : '{content} {icon}',
-            // uitheme widget needed to apply bootstrap
-            widgets : [ 'uitheme' ]
-          });
-        });
-
-      table.tablesorter(style="width:100%")
-        thead
-          tr
-            th Name
-            th Population
-        each country in json
-          tr
-            td #{country.Name}
-            td #{country.Population}
+  script.
+    function sortTable() {
+    var table, rows, switching, i, x, y, shouldSwitch;
+    table = document.getElementById("myTable");
+    switching = true;
+    while (switching) {
+    //start by saying: no switching is done:
+    switching = false;
+    rows = table.rows;
+    /*Loop through all table rows (except the
+    first, which contains table headers):*/
+    for (i = 1; i < (rows.length - 1); i++) {
+      //start by saying there should be no switching:
+      shouldSwitch = false;
+      /*Get the two elements you want to compare,
+      one from current row and one from the next:*/
+      x = rows[i].getElementsByTagName("TD")[4];
+      y = rows[i + 1].getElementsByTagName("TD")[4];
+      //check if the two rows should switch place:
+      if (Number(x.innerHTML) < Number(y.innerHTML)) {
+        //if so, mark as a switch and break the loop:
+        shouldSwitch = true;
+        break;
+      }
+    }
+    if (shouldSwitch) {
+      /*If a switch has been marked, make the switch
+      and mark that a switch has been done:*/
+      rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+      switching = true;
+    }
+    }
+    }
