--- a/views/about.pug
+++ b/views/about.pug
@@ -1,1 +1,64 @@
-doctype html
+extends default
+block content
+    style.
+        * {
+        box-sizing: border-box;
+        }
+        #myInput {
+        background-image: url('/css/searchicon.png');
+        background-position: 10px 10px;
+        background-repeat: no-repeat;
+        width: 100%;
+        font-size: 16px;
+        padding: 12px 20px 12px 40px;
+        border: 1px solid #ddd;
+        margin-bottom: 12px;
+        }
+        #myTable {
+        border-collapse: collapse;
+        width: 100%;
+        border: 1px solid #ddd;
+        font-size: 18px;
+        }
+        #myTable th, #myTable td {
+        text-align: left;
+        padding: 12px;
+        }
+        #myTable tr {
+        border-bottom: 1px solid #ddd;
+        }
+        #myTable tr.header, #myTable tr:hover {
+        background-color: #f1f1f1;
+        }
+    h2 Filter
+    input#myInput(type='text' onkeyup='myFunction()' placeholder='Search for countries..' title='Type in a country')
+    table#myTable
+        thead
+          tr
+            th Name
+            th Population
+        each country in json
+          tr
+            td #{country.Name}
+            td #{country.Population}
+    script.
+        function myFunction() {
+        var input, filter, table, tr, td, i, txtValue;
+        input = document.getElementById("myInput");
+        filter = input.value.toUpperCase();
+        table = document.getElementById("myTable");
+        tr = table.getElementsByTagName("tr");
+        for (i = 0; i < tr.length; i++) {
+        td = tr[i].getElementsByTagName("td")[0];
+        if (td) {
+        txtValue = td.textContent || td.innerText;
+        if (txtValue.toUpperCase().indexOf(filter) > -1) {
+        tr[i].style.display = "";
+        } else {
+        tr[i].style.display = "none";
+        }
+        }
+        }
+    
+    
+        }
