--- a/views/capitals.pug
+++ b/views/capitals.pug
@@ -2,7 +2,7 @@ extends default
 
 block content
   head
-    title Africa
+    title Europe
     a(href=`/`)
       button Home
     meta(charset='UTF-8')
@@ -27,17 +27,21 @@ block content
             theme : 'bootstrap',
             // icon needed for bootstrap theme
             headerTemplate : '{content} {icon}',
-            // ui theme widget needed to apply bootstrap
+            // uitheme widget needed to apply bootstrap
             widgets : [ 'uitheme' ]
           });
         });
-      
+
       table.tablesorter(style="width:100%")
         thead
           tr
-            th Name
-            th Population
+            th Country Code
+            th Language
+            th Is Official 
+            th Percentage
         each country in json
           tr
-            td #{country.Name}
-            td #{country.Population}
+            td #{country.CountryCode}
+            td #{country.Language}
+            td #{country. IsOfficial}
+            td #{country.Percentage}
