--- a/views/data.pug
+++ b/views/data.pug
@@ -1,47 +1,96 @@
-extends default
+extends default 
 
 block content
-  head
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  body
-    a(href=`/`)
-      button Home
-    button.btn
-      i.fa.fa-download
-        |  Download
-    div
-      form(action='/Countries' method="post")       
-      table.styled-table(style='width:50%', border='1')
+  style.
+    .filterDiv {
+    float: left;
+    background-color: #2196F3;
+    color: #ffffff;
+    width: 100px;
+    line-height: 100px;
+    text-align: center;
+    margin: 2px;
+    display: none;
+    }
+    .show {
+    display: block;
+    }
+    .container {
+    margin-top: 20px;
+    overflow: hidden;
+    }
+    /* Style the buttons */
+    .btn {
+    border: none;
+    outline: none;
+    padding: 12px 16px;
+    background-color: #f1f1f1;
+    cursor: pointer;
+    }
+    .btn:hover {
+    background-color: #ddd;
+    }
+    .btn.active {
+    background-color: #666;
+    color: white;
+    }
+  table.styled-table
+      thead
         tr
-          th Code 
+          th Code
           th Name
           th Continent
-          th Region 
-          th SurfaceArea 
-          th IndepYear 
-          th Population 
-          th LifeExpectancy 
-          th GNP 
-          th GNPOld
-          th LocalName
-          th GovernmentForm
-          th HeadOfState
+          th Region
+          th Population
           th Capital
-          th Code2 
-        each country in json        
-          tr        
-            td #{country.Code}
-            td #{country.Name}
-            td #{country.Continent}
-            td #{country.Region}
-            td #{country.SurfeacArea}
-            td #{country.IndepYear}
-            td #{country.Population}
-            td #{country.LifeExpectancy}
-            td #{country.GNP}
-            td #{country.GNPOld}
-            td #{country.LocalName}
-            td #{country.GovernmentForm}
-            td #{country.HeadOfState}
-            td #{country.Capital}
-            td #{country.Code2}
+      each country in json
+        tr
+          td #{country.Code}
+          td #{country.Name}
+          td #{country.Continent}
+          td #{country.Region}
+          td #{country.Population}
+          td #{country.Capital}
+
+
+
+  script.
+    filterSelection("all")
+    function filterSelection(c) {
+    var x, i;
+    x = document.getElementsByClassName("filterDiv");
+    if (c == "all") c = "";
+    for (i = 0; i < x.length; i++) {
+    w3RemoveClass(x[i], "show");
+    if (x[i].className.indexOf(c) > -1) w3AddClass(x[i], "show");
+    }
+    }
+    function w3AddClass(element, name) {
+    var i, arr1, arr2;
+    arr1 = element.className.split(" ");
+    arr2 = name.split(" ");
+    for (i = 0; i < arr2.length; i++) {
+    if (arr1.indexOf(arr2[i]) == -1) {element.className += " " + arr2[i];}
+    }
+    }
+    function w3RemoveClass(element, name) {
+    var i, arr1, arr2;
+    arr1 = element.className.split(" ");
+    arr2 = name.split(" ");
+    for (i = 0; i < arr2.length; i++) {
+    while (arr1.indexOf(arr2[i]) > -1) {
+    arr1.splice(arr1.indexOf(arr2[i]), 1);
+    }
+    }
+    element.className = arr1.join(" ");
+    }
+    // Add active class to the current button (highlight it)
+    var btnContainer = document.getElementById("myBtnContainer");
+    var btns = btnContainer.getElementsByClassName("btn");
+    for (var i = 0; i < btns.length; i++) {
+    btns[i].addEventListener("click", function(){
+    var current = document.getElementsByClassName("active");
+    current[0].className = current[0].className.replace(" active", "");
+    this.className += " active";
+    });
+    }
