--- a/views/index.pug
+++ b/views/index.pug
@@ -1,21 +1,5 @@
-extends default
+extends default 
 
 block content
-  a(href=`/data`)
-    button Data
-  a(href=`/countries`)
-    button World Population
-  a(href=`/africa`)
-    button.button Africa population
-  a(href=`/europe`)
-    button.button Europe population
-  a(href=`/asia`)
-    button.button Asia population
-  a(href=`/australia`)
-    button.button Australia population
-  a(href=`/america`)
-    button.button America population
-  a(href=`/sorter`)
-    button.button Table sorter
-    
-  img(src='./img/world.jpg' alt='world' style='width:1500px; height:700px;')
+  p hello
+  
