--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,51 @@
-extends default 
+extends default
 
 block content
-  p hello
-  
+    .page-content
+        h1 World Population
+        p A fully-responsive CSS-only header for your websites and other web applications.
+        h2 Technology
+        p
+            | This header is built with absolutely no JavaScript dependency. It uses CSS flexbox and grid for positioning
+            | (sorry older browsers!), and works on the smallest mobiles around.
+        p
+            strong Please note:
+            |  The menu uses a checkbox to open and close. You may need to add a handler to
+            |             ensure the checkbox is closed after a link is selected, if using React, or a similar library.
+        h1 Random Content Follows
+        p
+            | Below are some chunks of lorem ipsum to fill the space. Feel free to ignore them.
+        h2 Countries Report
+        p
+            | This is some page content. Ad minim non pariatur eiusmod adipisicing magna incididunt qui cupidatat. In Lorem
+            | ullamco exercitation in laborum magna. Aliqua cillum do pariatur dolor adipisicing ea enim. Deserunt nisi
+            | voluptate amet veniam aute ad duis cillum laborum occaecat nisi. Veniam occaecat eiusmod eu eu excepteur
+            | nostrud consectetur velit Lorem incididunt consectetur in dolore. Non fugiat deserunt exercitation ullamco.
+            | Consequat dolor veniam consequat voluptate non ad laboris.
+        h2 Cities report
+        p
+            | This is some page content. Ad minim non pariatur eiusmod adipisicing magna incididunt qui cupidatat. In Lorem
+            | ullamco exercitation in laborum magna. Aliqua cillum do pariatur dolor adipisicing ea enim. Deserunt nisi
+            | voluptate amet veniam aute ad duis cillum laborum occaecat nisi. Veniam occaecat eiusmod eu eu excepteur
+            | nostrud consectetur velit Lorem incididunt consectetur in dolore. Non fugiat deserunt exercitation ullamco.
+            | Consequat dolor veniam consequat voluptate non ad laboris.
+        h2 Capitals Report
+        p
+            | This is some page content. Ad minim non pariatur eiusmod adipisicing magna incididunt qui cupidatat. In Lorem
+            | ullamco exercitation in laborum magna. Aliqua cillum do pariatur dolor adipisicing ea enim. Deserunt nisi
+            | voluptate amet veniam aute ad duis cillum laborum occaecat nisi. Veniam occaecat eiusmod eu eu excepteur
+            | nostrud consectetur velit Lorem incididunt consectetur in dolore. Non fugiat deserunt exercitation ullamco.
+            | Consequat dolor veniam consequat voluptate non ad laboris.
+        h2 People Report
+        p
+            | This is some page content. Ad minim non pariatur eiusmod adipisicing magna incididunt qui cupidatat. In Lorem
+            | ullamco exercitation in laborum magna. Aliqua cillum do pariatur dolor adipisicing ea enim. Deserunt nisi
+            | voluptate amet veniam aute ad duis cillum laborum occaecat nisi. Veniam occaecat eiusmod eu eu excepteur
+            | nostrud consectetur velit Lorem incididunt consectetur in dolore. Non fugiat deserunt exercitation ullamco.
+            | Consequat dolor veniam consequat voluptate non ad laboris.
+        p
+            |
+        footer
+        | github repo:
+        p
+            a(href='https://github.com/Elvis-Jagger-Abdul-Jabbar/The_Last_Chance') github.com/thelastchance
