--- a/views/about.pug
+++ b/views/about.pug
@@ -1,64 +1,53 @@
-extends default
+extends default 
+
 block content
-    style.
-        * {
-        box-sizing: border-box;
-        }
-        #myInput {
-        background-image: url('/css/searchicon.png');
-        background-position: 10px 10px;
-        background-repeat: no-repeat;
-        width: 100%;
-        font-size: 16px;
-        padding: 12px 20px 12px 40px;
-        border: 1px solid #ddd;
-        margin-bottom: 12px;
-        }
-        #myTable {
-        border-collapse: collapse;
-        width: 100%;
-        border: 1px solid #ddd;
-        font-size: 18px;
-        }
-        #myTable th, #myTable td {
-        text-align: left;
-        padding: 12px;
-        }
-        #myTable tr {
-        border-bottom: 1px solid #ddd;
-        }
-        #myTable tr.header, #myTable tr:hover {
-        background-color: #f1f1f1;
-        }
-    h2 Filter
-    input#myInput(type='text' onkeyup='myFunction()' placeholder='Search for countries..' title='Type in a country')
-    table#myTable
-        thead
-          tr
-            th Name
-            th Population
-        each country in json
-          tr
-            td #{country.Name}
-            td #{country.Population}
+    h1.intro-copy
+      | Scroll down to use this simple back-to-top button made with modern vanilla javascript.
+    a#js-top.top-link.hide(href='')
+      svg(xmlns='http://www.w3.org/2000/svg' viewbox='0 0 12 6')
+        path(d='M12 6H0l6-6z')
+      span.screen-reader-text Back to top
+
+
     script.
-        function myFunction() {
-        var input, filter, table, tr, td, i, txtValue;
-        input = document.getElementById("myInput");
-        filter = input.value.toUpperCase();
-        table = document.getElementById("myTable");
-        tr = table.getElementsByTagName("tr");
-        for (i = 0; i < tr.length; i++) {
-        td = tr[i].getElementsByTagName("td")[0];
-        if (td) {
-        txtValue = td.textContent || td.innerText;
-        if (txtValue.toUpperCase().indexOf(filter) > -1) {
-        tr[i].style.display = "";
-        } else {
-        tr[i].style.display = "none";
+
+          // Set a variable for our button element.
+        const scrollToTopButton = document.getElementById('js-top');
+
+        // Let's set up a function that shows our scroll-to-top button if we scroll beyond the height of the initial window.
+        const scrollFunc = () => {
+          // Get the current scroll value
+          let y = window.scrollY;
+          
+          // If the scroll value is greater than the window height, let's add a class to the scroll-to-top button to show it!
+          if (y > 0) {
+            scrollToTopButton.className = "top-link show";
+          } else {
+            scrollToTopButton.className = "top-link hide";
+          }
+        };
+        
+        window.addEventListener("scroll", scrollFunc);
+
+        const scrollToTop = () => {
+          // Let's set a variable for the number of pixels we are from the top of the document.
+          const c = document.documentElement.scrollTop || document.body.scrollTop;
+          
+          // If that number is greater than 0, we'll scroll back to 0, or the top of the document.
+          // We'll also animate that scroll with requestAnimationFrame:
+          //https://developer.mozilla.org/en-US/docs/Web/API/window/requestAnimationFrame
+          if (c > 0) {
+            window.requestAnimationFrame(scrollToTop);
+            // ScrollTo takes an x and a y coordinate.
+            // Increase the '10' value to get a smoother/slower scroll!
+            window.scrollTo(0, c - c / 10);
+          }
+        };
+
+        // When the button is clicked, run our ScrolltoTop function above!
+        scrollToTopButton.onclick = function(e) {
+          e.preventDefault();
+          scrollToTop();
         }
-        }
-        }
-    
-    
-        }
+
+        
