--- a/views/cities.pug
+++ b/views/cities.pug
@@ -1,43 +1,106 @@
-extends default
+extends default 
 
 block content
-  head
-
-    link(rel='stylesheet', href='/css/tablesorter.css')
-
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
-    script(src='https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js')
-    script(src='https://mottie.github.io/tablesorter/js/jquery.tablesorter.js')
-    script(src='https://mottie.github.io/tablesorter/js/jquery.tablesorter.widgets.js')
-
-  body
-
-    .container
-      block content
- 
-      script(type='text/javascript').
-        $(function() {
-          $("table.tablesorter").tablesorter({
-            sortList: [[1,1]],
-            // set bootstrap theme
-            theme : 'bootstrap',
-            // icon needed for bootstrap theme
-            headerTemplate : '{content} {icon}',
-            // ui theme widget needed to apply bootstrap
-            widgets : [ 'uitheme' ]
-          });
-        });
-      
-      table.tablesorter(style="width:100%")
-        thead
+     
+  // Custom syle
+  style.
+    div.container { max-width: 1200px }
+    
+  div.container
+    table#cities.display.nowrap(style='width:100%')
+      thead
+        tr
+          th City
+          th Country
+          th district
+          th Population
+          th Population
+          th Capital
+        tr
+          td
+          td
+          td
+          td
+          td
+          td
+      tbody
+        each country in json
           tr
-            th Name
-            th Country
-            th District
-            th Population
-        each city in json
-          tr
-            td #{city.Name}
-            td #{city.Country}
-            td #{city.District}
-            td #{city.Population}
+            td #{country.Name}
+            td #{country.Country}
+            td #{country.District}
+            td #{country.Population}
+            td #{country.Population}
+            td #{country.Capital}
+  // Custom script to add dropdwons dependant
+  script.
+    /* Plugin API method to determine is a column is sortable */
+    $.fn.dataTable.Api.register('column().searchable()', function() {
+    var ctx = this.context[0];
+    return ctx.aoColumns[this[0]].bSearchable;
+    });
+    function createDropdowns(api) {
+    api.columns().every(function() {
+    if (this.searchable()) {
+    var that = this;
+    var col = this.index();
+    // Only create if not there or blank
+    var selected = $('thead tr:eq(1) td:eq(' + col + ') select').val();
+    if (selected === undefined || selected === '') {
+    // Create the `select` element
+    $('thead tr:eq(1) td')
+    .eq(col)
+    .empty();
+    var select = $('<select><option value=""></option></select>')
+    .appendTo($('thead tr:eq(1) td').eq(col))
+    .on('change', function() {
+    that.search($(this).val()).draw();
+    createDropdowns(api);
+    });
+    api
+    .cells(null, col, {
+    search: 'applied'
+    })
+    .data()
+    .sort()
+    .unique()
+    .each(function(d) {
+    select.append($('<option>' + d + '</option>'));
+    });
+    }
+    }
+    });
+    }
+    $(document).ready(function() {
+    // Create the DataTable
+    var table = $('#cities').DataTable({
+      // default order 4th row (population)
+      "order": [[ 4, "desc" ]],
+      rowReorder: {
+              selector: 'td:nth-child(2)'
+          },
+          responsive: true,
+      dom: 'lBfrtip',
+        buttons: [
+            'copy',
+            'excel',
+            'csv',
+            'pdf'
+        ],
+    "lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "All"]],
+    fixedHeader: {
+            header: true,
+            headerOffset: $('#fixed').height()
+        },
+    orderCellsTop: false,
+    columnDefs: [
+    {
+    searchable: false,
+    targets: [0, 4]
+    }
+    ],
+    initComplete: function() {
+    createDropdowns(this.api());
+    }
+    });
+    });
